# remotion-motioncanvas-framescript-bench

./: .gitignore  BENCHMARK.md  LICENSE  README.md
framescript_benchmark/: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.html  tsconfig.app.json  tsconfig.electron.json  vite.render.config.ts  vite.studio.config.ts
framescript_benchmark/backend/: Cargo.toml
framescript_benchmark/backend/src/: decoder.rs  ffmpeg.rs  future.rs  main.rs  util.rs
framescript_benchmark/backend/src/ffmpeg/: bin.rs  command.rs  hw_decoder.rs  sw_decoder.rs
framescript_benchmark/electron/: main.ts  render-settings-preload.ts  types.d.ts
framescript_benchmark/project/: project.tsx
framescript_benchmark/render/: Cargo.toml
framescript_benchmark/render/src/: ffmpeg.rs  main.rs
framescript_benchmark/scripts/: build-binaries.mjs  framescript_render.ps1  start-bin.mjs
framescript_benchmark/src/: StudioApp.tsx  main.tsx  vite-env.d.ts
motioncanvas_benchmark/: package.json  pnpm-lock.yaml
remotion_benchmark/: package.json  pnpm-lock.yaml
remotion_benchmark/src/: Benchmark.tsx  Root.tsx
revideo_benchmark/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
scripts/: README.md  benchmark_runs.ps1  render_framescript_default.ps1  render_framescript_default_10s.ps1  render_framescript_fast.ps1  render_motioncanvas.ps1  render_remotion_default.ps1  render_remotion_default_10s.ps1  render_remotion_fast.ps1  render_revideo_default.ps1  render_revideo_default_10s.ps1
(+28 files in other folders)
