# !tyml @cargo/Cargo
[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = [ "ws", "json" ] }
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "io" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "fmt" ] }
futures = "0.3.31"
futures-util = "0.3.31"
manual_future = "0.1.3"
shellexpand = "3"
dunce = "1"
axum-extra = { version = "0.12.2", features = [ "typed-header" ] }
num_threads = "0.1.7"
